--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "ext_src/gtest-1.7.0"]
-	path = ext_src/gtest-1.7.0
-	url = git@github.com:google/googletest.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest
+	branch = master
