Changed source file extensions
CLion bug was causing .cpp files to not be found, changed them to .cc to solve this

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 project(Mini_RPG)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+include_directories(src)
 
-set(SOURCE_FILES Makefile
-        src/main.cpp
-        src/Controller/Controller.cpp src/Controller/Controller.h
-        src/Model/Model.cpp src/Model/Model.h src/Model/Character.cpp src/Model/Character.h src/Model/Weapon.cpp src/Model/Weapon.h  src/Model/Notification.h src/Model/Sprite.cpp src/Model/Sprite.h
-        src/Observer/Subject.cpp src/Observer/Subject.h src/Observer/Observer.cpp src/Observer/Observer.h
-        src/View/View.cpp src/View/View.h src/View/Channel.h src/View/DrawingHelpers.cpp src/View/DrawingThread.cpp)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -framework OpenGL -lsfml-system -lsfml-window -lsfml-graphics")
+
+set(SOURCE_FILES Makefile README.md
+        src/main.cc
+        src/Controller/Controller.cc src/Controller/Controller.h
+        src/Model/Model.cc src/Model/Model.h src/Model/Character.cc src/Model/Character.h src/Model/Weapon.cc src/Model/Weapon.h src/Model/Notification.h src/Model/Sprite.cc src/Model/Sprite.h
+        src/Observer/Subject.cc src/Observer/Subject.h src/Observer/Observer.cc src/Observer/Observer.h
+        src/View/View.cc src/View/View.h src/View/Channel.h src/View/DrawingHelpers.cc src/View/DrawingThread.cc)
 
 add_executable(Mini_RPG ${SOURCE_FILES})
