Added 3rd thread for model game loop
Model game loop processes events from the controller & controls the state of the game; handles all interactions between characters, including activating enemies & making them attack once every second if player is in their trigger zone
Added channel between Controller and Model for communication, updated README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -framework OpenGL -lsfml-syst
 set(SOURCE_FILES Makefile README.md
         src/main.cc
         src/Controller/Controller.cc src/Controller/Controller.h
-        src/Model/Model.cc src/Model/Model.h src/Model/Character.cc src/Model/Character.h src/Model/Weapon.cc src/Model/Weapon.h src/Model/Notification.h src/Model/Sprite.cc src/Model/Sprite.h
+        src/Model/Model.cc src/Model/Model.h src/Model/Character.cc src/Model/Character.h src/Model/Weapon.cc src/Model/Weapon.h src/Model/Sprite.cc src/Model/Sprite.h src/Model/Notification.h src/Model/EventPackage.h
         src/Observer/Subject.cc src/Observer/Subject.h src/Observer/Observer.cc src/Observer/Observer.h
-        src/View/View.cc src/View/View.h src/View/Channel.h src/View/DrawingHelpers.cc src/View/DrawingThread.cc)
+        src/View/View.cc src/View/View.h src/Channel.h src/View/DrawingHelpers.cc src/View/DrawingThread.cc src/Model/GameThread.cc)
 
 add_executable(Mini_RPG ${SOURCE_FILES})
