Added Prop functionality, added YAML configs for items

--- a/resources/Items/item.yaml.example
+++ b/resources/Items/item.yaml.example
@@ -3,12 +3,12 @@ name: "level 1 sword"
 type: "weapon"  # weapon, armor, item
 
 image:
-  - path: ""
-  - sheet: true
-  - row: 0
-  - col: 0
-  - w: 10
-  - h: 10
+  path: ""
+  sheet: true
+  row: 0
+  col: 0
+  w: 10
+  h: 10
 
 # Whether or not the item can be dropped by an enemy
 # Value of 0-10, 0 means can't be dropped, 10 means always dropped
@@ -19,20 +19,20 @@ cost: 0
 
 animations:
   # Required for weapons
-  - attack:
-    - activePath: ""
-    - timeout: 10
+  attack:
+    activePath: ""
+    timeout: 10
 
 # Can this item be acquired (can it turn into a tool)
 acquirable: false
 
 # Optional: immediate effect of the item if it's not acquirable (ie a heart)
 # immediate_effect:
-#  - healing: 50       # health points it regenerates
-#  - value: 0          # how much money it gives you
-#  - temp_strength:
-#     - timeout: 100
-#     - bonus: 5
+#  healing: 50       # health points it regenerates
+#  value: 0          # how much money it gives you
+#  temp_strength:
+#     timeout: 100
+#     bonus: 5
 
 # Required for weapons
 strength: 5
