Update circleCI with yaml library

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
             sudo apt-get update
             git submodule sync; git submodule update --init # initialize git submodules
             sudo apt-get install libsfml-dev                # version 2.4.2
-            sudo apt-get install libjsoncpp-dev             # version 1.7.3
-            cd /usr/include;sudo ln -s jsoncpp/json json    # change include path so it matches local build
+            sudo apt-get install libyaml-cpp-dev            # version 0.5.2-4
 
       - run:
           name: Compile
