--- a/resources/Items/heart.yaml
+++ b/resources/Items/heart.yaml
@@ -1,5 +1,6 @@
-name: "heart"
+name: "Heart"
 type: "item"
+
 image:
   path: "resources/Textures/heart.png"
   sheet: false
@@ -7,9 +8,10 @@ image:
   col: 0
   w: 40
   h: 40
+
 drop_chance: 4
 cost: 0
 
 acquirable: false
-immediate_effect:
+effect:
   healing: 50
