--- a/resources/Items/coin.yaml
+++ b/resources/Items/coin.yaml
@@ -1,5 +1,6 @@
-name: "coin"
+name: "Coin"
 type: "item"
+
 image:
   path: "resources/Textures/coin.png"
   sheet: false
@@ -7,9 +8,10 @@ image:
   col: 0
   w: 40
   h: 40
+
 drop_chance: 4
 cost: 0
 
 acquirable: false
-immediate_effect:
+effect:
   value: 5
