--- a/resources/Areas/start.yaml
+++ b/resources/Areas/start.yaml
@@ -1,4 +1,4 @@
-background: null
+background: "resources/Textures/sample_map.png"
 
 characters:
   # Player
@@ -23,8 +23,8 @@ characters:
   - active: false
     str: 10
     sp: 3
-    x: 700
-    y: 512
+    x:  642
+    y: 250
     sheet: false
     path: "resources/Textures/Enemy_1.png"
     w: 100
@@ -35,7 +35,7 @@ characters:
     str: 10
     sp: 3
     x: 1400
-    y: 300
+    y: 310
     sheet: true
     path: "resources/Textures/Character_set_5.png"
     row: 4
@@ -61,7 +61,7 @@ characters:
     str: 10
     sp: 3
     x: 300
-    y: 350
+    y: 650
     sheet: true
     path: "resources/Textures/Character_set_5.png"
     row: 4
@@ -74,8 +74,8 @@ characters:
   - active: true
     str: 10
     sp: 4
-    x: 1550
-    y: 850
+    x: 1560
+    y: 880
     sheet: true
     path: "resources/Textures/Character_set_5.png"
     row: 0
@@ -88,7 +88,7 @@ characters:
   - active: false
     str: 5
     sp: 4
-    x: 250
+    x: 350
     y: 950
     sheet: true
     path: "resources/Textures/Character_set_5.png"
