--- a/assets/Areas/start.yaml
+++ b/assets/Areas/start.yaml
@@ -1,4 +1,4 @@
-background: "resources/Textures/sample_map.png"
+background: "assets/Textures/sample_map.png"
 
 characters:
   # Player
@@ -8,7 +8,7 @@ characters:
     x: 432
     y: 512
     sheet: true
-    path: "resources/Textures/Character_set_2.png"    # default = moustached man
+    path: "assets/Textures/Character_set_2.png"    # default = moustached man
     row: 4    # optional
     col: 1    # optional
 
@@ -26,7 +26,7 @@ characters:
     x:  642
     y: 250
     sheet: false
-    path: "resources/Textures/Enemy_1.png"
+    path: "assets/Textures/Enemy_1.png"
     w: 100
     h: 110
 
@@ -37,7 +37,7 @@ characters:
     x: 1400
     y: 310
     sheet: true
-    path: "resources/Textures/Character_set_5.png"
+    path: "assets/Textures/Character_set_5.png"
     row: 4
     col: 7
     w: 80
@@ -50,7 +50,7 @@ characters:
     x: 1000
     y: 700
     sheet: true
-    path: "resources/Textures/Character_set_5.png"
+    path: "assets/Textures/Character_set_5.png"
     row: 4
     col: 7
     w: 80
@@ -63,7 +63,7 @@ characters:
     x: 300
     y: 650
     sheet: true
-    path: "resources/Textures/Character_set_5.png"
+    path: "assets/Textures/Character_set_5.png"
     row: 4
     col: 1
     w: 80
@@ -77,7 +77,7 @@ characters:
     x: 1560
     y: 880
     sheet: true
-    path: "resources/Textures/Character_set_5.png"
+    path: "assets/Textures/Character_set_5.png"
     row: 0
     col: 11
     w: 80
@@ -91,7 +91,7 @@ characters:
     x: 350
     y: 950
     sheet: true
-    path: "resources/Textures/Character_set_5.png"
+    path: "assets/Textures/Character_set_5.png"
     row: 0
     col: 11
     w: 80
